changes to Scheduler, working version